<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:src="@drawable/baseline_school_24"
        android:contentDescription="@string/school_name"/>
    <TextView
        android:id="@+id/detail_school_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="14dp"
        android:shadowColor="@color/teal_700"
        android:shadowDx="-7"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:textSize="48sp"
        android:text="@string/school_name" />

    <TextView
        android:id="@+id/detail_school_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:textSize="32sp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/detail_school_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/detail_school_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/website" />

    <TextView
        android:id="@+id/detail_school_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:text="@string/overview" />

</LinearLayout>